Changelog
=========

2019.4.0rc3 (unreleased)
------------------------

- Bump ftw.solr to 2.7.0 to get console scripts for maintenance tasks. [deiferni]
- Bump ftw.solr to 2.6.2 to get fix for avoiding atomic updates with null-documents. [lgraf]
- Add example contentent for workspaces. [elioschmutz]
- Bump docxcompose to version 1.0.2. [njohner]
- Introduce plone proposal workflow, provide api support for proposal workflow transitions. [deiferni]
- Always raise when viewlet rendering errors occur during development. [deiferni]
- Rename label and values of the privacy layer field. [phgross]
- Add configuration possibility, to blacklist mimetypes from archival conversion. [phgross]
- Do no longer render `None` value in document description. [elioschmutz]
- Integrate ToDos in GEVER-Notification-System. [njohner]
- Prevent copy / paste of checked out documents. [njohner]
- Add is_subdossier and is_subtask to listing endpoint. [njohner]
- Correctly handle inactive groups in the sharing view. [njohner]
- Drop custom model forms for proposals and create proposal model via event handler. [deiferni]
- Track changes in response objects for todo-types. [elioschmutz]
- Include original files in ech0160 SIP export even when archival_file exists. [njohner]
- Add filename and checked_out fields to recently-touched endpoint. [njohner]


2019.4.0rc2 (2019-08-21)
------------------------

- Introduce `IBaseProposal` class, `ISubmittedProposal` no longer inherits from `IProposal`. [deiferni]
- Move remaining proposal model fields to plone content type. [deiferni]
- Implement FTPSTransport for uploading SIPs to FTPS server. [lgraf]
- Display keywords in Mail overview. [njohner]
- Bump ftw.keywordwidget to 2.1.0 to use async mode of keyword widgets for document and dossier keywords. [njohner]
- Fix an issue where it was no longer possible to modify a workspace as a workspace owner. [elioschmutz]