@@ -7,6 +7,7 @@ Changelog
 - Bump ftw.solr to 2.7.0 to get console scripts for maintenance tasks. [deiferni]
 - Bump ftw.solr to 2.6.2 to get fix for avoiding atomic updates with null-documents. [lgraf]
 - Add example contentent for workspaces. [elioschmutz]
+- Fix unicode error in listing endpoint. [njohner]
 - Bump docxcompose to version 1.0.2. [njohner]
 - Introduce plone proposal workflow, provide api support for proposal workflow transitions. [deiferni]
 - Always raise when viewlet rendering errors occur during development. [deiferni]
